<resources>
    <string name="app_name">Fetal heart rate monitoring</string>
    <string name="fhrm_info_com" />

    <string name="drawer_open">Open Navigation </string>
    <string name="drawer_close">Close Navigation </string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">REGISTER</string>
    <string name="registeraccount">REGISTER</string>
    <string name="already_registered">Already Registered?</string>
    <string name="loginaccount">LOGIN</string>
    <string name="confirm_password">confirm password</string>
    <string name="turn_off">turn off</string>
    <string name="turn_on">turn on</string>
    <string name="find_device">find device</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="save">SAVE</string>
    <string name="enter_results_here">enter results here...</string>
    <string name="c1">C</string>
    <string name="c">C</string>
</resources>
