<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundcolor"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    tools:context=".Login">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="127dp"
    android:layout_marginTop="50dp"
    app:srcCompat="@drawable/img"/>
    <EditText
        android:drawableTint="@color/gradient_start_color"
        android:id="@+id/edittext_username"
        android:background="@drawable/more_shape"
        android:paddingLeft="2dp"
        android:layout_width="200dp"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username"/>
    <EditText
        android:drawableTint="@color/gradient_start_color"
        android:id="@+id/edittext_password"
        android:background="@drawable/more_shape"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:layout_width="200dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_height="40dp"
        android:hint="@string/password"/>
    <Button
        android:textColor="@color/gradient_start_color"
        android:id="@+id/button_login"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:background="@drawable/advanced_shape"

        android:layout_width="200dp"
        android:layout_height="40dp" />
   <LinearLayout
       android:layout_marginTop="10dp"
       android:orientation="horizontal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
       <TextView
          android:textColor="@android:color/black"
           android:layout_width="wrap_content"
           android:layout_marginTop="10dp"
           android:text="@string/not_registered"
           android:layout_height="35dp" />
       <TextView
           android:id="@+id/textview_register"
           android:textColor="@color/wordcolor"
           android:layout_width="wrap_content"
           android:layout_marginTop="10dp"
           android:paddingLeft="5dp"
           android:textStyle="bold"
           android:textSize="16sp"
           android:text="@string/register"
           android:layout_height="35dp" />
   </LinearLayout>
    



</LinearLayout>